--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.j256.ormlite:ormlite-android:4.48'
-    compile files('build/lib/core-2.2.jar')
+    // http://mvnrepository.com/artifact/com.google.zxing/core
+    compile group: 'com.google.zxing', name: 'core', version: '2.2'
+
 }
