--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 31 21:08:22 BRT 2016
-sdk.dir=C\:\\Users\\Milton\\AppData\\Local\\Android\\Sdk
+#Fri Jun 10 08:20:30 BRT 2016
+sdk.dir=C\:\\Users\\Aluno\\AppData\\Local\\Android\\Sdk
